typo fixes, lint cleanup Add support for globs with arbitrary depth Added support for proto Import handler
